# dumpcode

./: .coveragerc  .dump_config.json  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
src/dumpcode/: __init__.py  cli.py  config.py  constants.py  core.py  engine.py  formatters.py  main.py  processors.py  utils.py  writer.py
src/dumpcode/ai/: __init__.py  base.py  claude.py  client.py  deepseek.py  diagnostics.py  gemini.py  models.py  openai_client.py  orchestrator.py
tests/: conftest.py  test_ai_auto_mode.py  test_ai_client_logic.py  test_ai_diagnostics.py  test_ai_diagnostics_concurrency.py  test_ai_integration.py  test_ai_orchestrator.py  test_ai_provider_registry.py  test_ai_sdk_loading.py  test_binary_detection.py  test_cli_integration.py  test_config.py  test_config_safety.py  test_dumpsession.py  test_encoding_detection.py  test_engine.py  test_engine_execution.py  test_formatters.py  test_git_integration.py  test_include_exclude_overrides.py  test_main_edge_cases.py  test_processors.py  test_processors_edge_cases.py  test_utils.py  test_writer.py
tests/fixtures/: __init__.py  fs_fixtures.py  git_fixtures.py  mock_fixtures.py  output_checker.py  xml_fixtures.py
