[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dumpcode"
version = "1.2.0"
description = "Codebase dumper with auto-versioning, dynamic profiles, and OSC52 clipboard support."
requires-python = ">=3.9"
authors = [
    {name = "Florent Lejoly", email = "florent.lejoly@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
token-counting = ["tiktoken>=0.5.0"]

[project.scripts]
dumpcode = "dumpcode.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "*.dump_config.json",
    "*.egg-info*",
    ".github*",
    ".git*",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]
